# python-support

./: .dockerignore  .flake8  .gitignore  .travis.yml  Description.md  Dockerfile  README.md  README.txt  cloud_state.py  extended_tck.sh  requirements.txt  setup.cfg  setup.py  tck.sh
cloudstate/: __init__.py  action_context.py  action_protocol_entity.py  action_servicer.py  cloud_state.py  cloudstate.py  contexts.py  discovery_servicer.py  entity_key_pb2.py  entity_pb2.py  entity_pb2_grpc.py  evensourced_servicer.py  event_sourced_context.py  event_sourced_entity.py  event_sourced_pb2.py  event_sourced_pb2_grpc.py  eventsourced_servicer.py  function_servicer.py  stateless_function_context.py  stateless_function_entity.py  version.py
cloudstate/test/: run_test_server.py  tck_services.py
cloudstate/test/actiondemo/: action_definition.py  actiondemo.proto  actiondemo2.proto  test_actiondemo.py
cloudstate/test/functiondemo/: function_definition.py  test_functiondemo.py
cloudstate/test/shoppingcart/: Dockerfile  requirements.txt  shopping_cart.py  shopping_cart_entity.py  test_shoppingcart.py
cloudstate/tests/: test_cloudstate.py
cloudstate/utils/: payload_utils.py
docs/: Makefile  README.md  build.sbt
docs/src/main/paradox/: gettingstarted.md  index.md
docs/src/modules/python/: nav.adoc
protobuf/: README.md
scripts/: compile-protobuf.sh  fetch-cloudstate-pb.sh
shoppingcart/: Dockerfile  domain_pb2.py  requirements.txt  shopping_cart.py  shopping_cart_entity.py  shoppingcart_pb2.py  shoppingcart_pb2_grpc.py
tck/: build_tck_docker_image.sh  run_tck.sh
(+7 files in other folders)
