[metadata]
url = https://cloudstate.io/
author = Cloudstate
license = Apache
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://cloudstate.io/docs/user/lang/index.html
    Source = https://github.com/cloudstateio/python-support

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    protobuf == 3.11.3
    google-api == 0.1.12
    grpcio == 1.28.1
    grpcio-tools == 1.28.1
    attrs == 19.3.0
    googleapis-common-protos >= 1.51.0

[aliases]
test=pytest

[tool:pytest]
python_files = cloudstate/test/**/test_*.py